--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,37 @@
- 
+# Dependencies
+node_modules/
+/back/node_modules/
+/front/node_modules/
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Build files
+/dist
+/build
+/front/dist
+/front/build
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+*.log
+
+# Editor directories and files
+.idea/
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes 
